package an rpm using jpackage