@@ -514,22 +514,21 @@ task(afterEclipseImport).doLast {
     f.append('encoding//src/main/resources/dictionary_zh_TW.properties=UTF-8\n')
 }
 
-task appImage(type: Exec) {
+task macAppImage(type: Exec) {
     workingDir "${projectDir}"
     commandLine 'jpackage', '--input', 'build/osgi/', '--name', 'muCommander', '--app-version', project.version, '--icon', 'package/osx/icon.icns', '--main-jar', 'mucommander-'+project.version+'.jar', '--main-class', 'com.mucommander.main.muCommander', '--runtime-image', 'jre/macOS', '--java-options', '--add-exports java.desktop/com.apple.laf=ALL-UNNAMED --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.transaction.xa/javax.transaction.xa=ALL-UNNAMED --add-opens java.management/javax.management=ALL-UNNAMED --add-opens java.rmi/java.rmi=ALL-UNNAMED --add-opens java.security.jgss/org.ietf.jgss=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED', '--mac-package-identifier', 'com.mucommander.muCommander', '--type', 'app-image', '--dest', "${buildDir}"
-}
-
-appImage.doLast {
-   copy {
-       from "package"
-       include "license.txt"
-       include "readme.txt"
-       into "${buildDir}/muCommander.app/Contents"
-   }
-   delete("${buildDir}/muCommander.app/Contents/app/run.bat")
-   delete("${buildDir}/muCommander.app/Contents/app/run.sh")
-   delete("${buildDir}/muCommander.app/Contents/app/system-libs")
-   // todo: add NSSupportsAutomaticGraphicsSwitching?
+    doLast {
+       copy {
+          from "package"
+          include "license.txt"
+          include "readme.txt"
+          into "${buildDir}/muCommander.app/Contents"
+       }
+       delete("${buildDir}/muCommander.app/Contents/app/run.bat")
+       delete("${buildDir}/muCommander.app/Contents/app/run.sh")
+       delete("${buildDir}/muCommander.app/Contents/app/system-libs")
+       // todo: add NSSupportsAutomaticGraphicsSwitching?
+    }
 }
 
 // after adding <key>NSSupportsAutomaticGraphicsSwitching</key><true/>
@@ -537,3 +536,25 @@ task dmg(type: Exec) {
     workingDir "${projectDir}"
     commandLine 'jpackage', '--app-image', "${buildDir}/muCommander.app", '--app-version', project.version, '--license-file', 'package/license.txt', '--about-url', 'https://www.mucommander.com', '--dest', "${buildDir}/distribution"
 }
+
+task linuxAppImage(type: Exec) {
+    workingDir "${projectDir}"
+    commandLine 'jpackage', '--input', 'build/osgi/', '--name', 'muCommander', '--app-version', project.version, '--main-jar', 'mucommander-'+project.version+'.jar', '--main-class', 'com.mucommander.main.muCommander', '--java-options', '--add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.transaction.xa/javax.transaction.xa=ALL-UNNAMED --add-opens java.management/javax.management=ALL-UNNAMED --add-opens java.rmi/java.rmi=ALL-UNNAMED --add-opens java.security.jgss/org.ietf.jgss=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED', '--type', 'app-image', '--dest', "${buildDir}"
+    doLast {
+        copy {
+           from "package"
+           include "license.txt"
+           include "readme.txt"
+           into "${buildDir}/muCommander/lib/app"
+        }
+        delete("${buildDir}/muCommander/lib/app/run.bat")
+        delete("${buildDir}/muCommander/lib/app/run.sh")
+        delete("${buildDir}/muCommander/lib/app/system-libs")
+    }
+}
+
+task rpm(type: Exec) {
+    workingDir "${projectDir}"
+    commandLine 'jpackage', '--type', 'rpm', '--app-image', "${buildDir}/muCommander", '--app-version', project.version, '--license-file', 'package/license.txt', '--about-url', 'https://www.mucommander.com', '--dest', "${buildDir}/distribution", '--icon', 'mucommander-core/src/main/resources/images/mucommander/icon128_24.png', '--linux-app-category', 'Application;FileManager;Utility;'
+}
+
